# iot_receiver

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  release.zsh  requirements.txt
.github/workflows/: test.yml
config/: settings.toml
iot_data_receiver/: cli_tools.py  endpoints.py  main.py  model.py  utils.py
scripts/: database_init_commands.sql
tests/: conftest.py  test_api.py  test_cli_tools.py  test_endpoint_description.py  test_model.py
